fix: make <body> visible

--- a/common.css
+++ b/common.css
@@ -90,7 +90,6 @@ body {
     color: var(--color-text);
     margin: 0; /* Reset default body margin */
     font-size: var(--font-size-base);
-    opacity: 0;
 }
 
 @keyframes fadeIn {
